--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Test with pytest
         run: |
           pip install .
-          python -m pytest --cov=emv_tools tests
+          python -m pytest --cov=scipion_bridge tests
