--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.8"
 dependency-injector = ">=4.48.1,<5.0.0"
 autopep8 = ">=2.3.0,<3.0.0"
 networkx = ">=3.1.0,<4.0.0"
+tabulate = "^0.9.0"
 
 [tool.poetry.group.test]
 optional = true
