--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 poetry
+          pip install flake8 poetry numpy
           poetry config virtualenvs.create false
       - name: Install package
         run: |
