--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependency-injector = ">=4.48.1,<5.0.0"
 autopep8 = ">=2.3.0,<3.0.0"
 networkx = ">=3.1.0,<4.0.0"
 tabulate = "^0.9.0"
+xmipp_metadata = "^1.1.5"
 
 [tool.poetry.group.test]
 optional = true
